Sort on zone to ensure consistent order in unit test